Regression displaying bone-children in dupli-groups #47683

Closed
opened 2016-03-04 10:31:00 +01:00 by Campbell Barton · 5 comments

Since 3fa0a1a5bc

When lamps which are dupli-instances and children of a bone, and that bone is in the group.
The view will clip out the lamps as soon as their center-point is outside the view.

Play animation in the attached files and notice the lamps flicker on/off in the circled regions.
armature_boundbox_clip_regression.blend

Since 3fa0a1a5bc When lamps which are dupli-instances and children of a bone, and that bone is in the group. The view will clip out the lamps as soon as their center-point is outside the view. Play animation in the attached files and notice the lamps flicker on/off in the circled regions. [armature_boundbox_clip_regression.blend](https://archive.blender.org/developer/F287485/armature_boundbox_clip_regression.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Campbell Barton 2016-03-04 10:31:00 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

That’s quite weird… The change in that commit causing the bug is adding armature bbox to BKE_object_boundbox_get(). So think it just unveiled an actual bug in drawing code somewhere, will try to nail it down later.

That’s quite weird… The change in that commit causing the bug is adding armature bbox to `BKE_object_boundbox_get()`. So think it just unveiled an actual bug in drawing code somewhere, will try to nail it down later.

This issue was referenced by d8b8a6e275

This issue was referenced by d8b8a6e275cf200dc06779b6c30d02c2f08fd4eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47683
No description provided.